@@ -1,5 +1,10 @@
 2008-07-07  Mirco Bauer <meebey@meebey.net> 
 
+	* Notebook.cs: Attempt to get focus faster back when switching a page, but
+	  doesn't work.
+
+2008-07-07  Mirco Bauer <meebey@meebey.net> 
+
 	* Entry.cs: Fixed scrolling notebook tabs (closes: trac bug #11).
 	
 	  Fixed indention.
